the html file that IdentityServer4 redirects to after automatic silent renew

--- a/m4/after/securing-angular-client/src/assets/silent-redirect.html
+++ b/m4/after/securing-angular-client/src/assets/silent-redirect.html
@@ -1,3 +1,6 @@
+<!-- This is VERY SIMILAR to the html file we setup to receive the goodies after a login -->
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.5.1/oidc-client.min.js"></script>
 <script>
   var config = {
